# doa

lektion1/: uppgift_1.c
lektion1/Uppgift_2/: uppgift_2  uppgift_2.c
ou2/: make.sh  stack_test  stack_test.c
ou3/: CMakeLists.txt
ou3/bug1/: CMakeLists.txt  bug1  bug1.c  solved1.c
ou3/bug2/: CMakeLists.txt  bug2  solved2.c
ou3/bug3/: CMakeLists.txt  bug3  bug3_solved  solved3.c
ou3/bug4/: CMakeLists.txt  bug4  solved4  solved4.c
ou4/kod/: .arraycomp.m.swp  arraycomp.m  arraytable.c  arraytable_test  dlisttable_test  loadtests.m  makearray.sh  makedlist.sh  makemtf.sh  megaplotter.m  mtftable.c  mtftable_test
ou4/kod/arraytable_test_40000_10_5/: .plotter.m.swp  input.txt  plotter.m
ou4/kod/arraytable_test_40000_10_5/split/: t1split.txt  t2split.txt  t3split.txt  t4split.txt  t5split.txt
ou4/kod/arraytable_test_40000_10_5/splitavg/: t1avg.txt  t2avg.txt  t3avg.txt  t4avg.txt  t5avg.txt
ou4/kod/dlisttable_test_40000_10_5/: input.txt  raw.txt
ou4/kod/dlisttable_test_40000_10_5/split/: t1split.txt  t2split.txt  t3split.txt  t4split.txt  t5split.txt
ou4/kod/dlisttable_test_40000_10_5/splitavg/: t1avg.txt  t2avg.txt  (+3 more)
ou4/kod/mtftable_test_40000_10_5/: input.txt  raw.txt
ou4/skript/: instructions.txt  plotter.m
ou4/uppgift/: 5DV149 2020 LP3 - OU4 - Tabeller.html
ou5/kod/: .ycm_extra_conf.py  CMakeLists.txt  cleanfile.c  graph.c  graph_array_1d.c  is_connected.c  make.sh  withmatrix.c
ou5/maps/: airmap2.map  airmap3.map  airmap4.map  airmap5.map  x-bad-map-format.map
ou5/uppgift/: 5DV149 2020 LP3 - OU5 - Grafer och grafalgoritmer.html
(+10 files in other folders)
